--- a/WorkService/.settings/org.eclipse.core.resources.prefs
+++ b/WorkService/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//main/ColumnCompare.py=utf-8
 encoding//main/MultiLine2OneLine.py=utf-8
+encoding//main/OneLine2MultiLine.py=utf-8
